# torch-wae

./: COMMERCIAL_USE  README.md  mypy.ini  pyproject.toml
.github/workflows/: main.yml
src/torch_wae/: audio.py  dataset.py  fs.py  loss.py  network.py  rand.py
src/torch_wae/cli/: convert_dataset_to_jsonl.py  convert_dataset_to_web.py  convert_pair_to_web.py  convert_to_melspec.py  copy_dataset.py  export_to_onnx.py  generate_pair.py  reshard_web.py
tests/: test__.py  test__audio.py  test__network.py
